# nectar

./: README.md  land.rob.Nectar.json  meson.build
.github/workflows/: flatpak.yml
data/: land.rob.Nectar.desktop.in  land.rob.Nectar.metainfo.xml.in  meson.build
data/wordlists/: pangrams.txt  valid.txt
src/: game.py  main.py  meson.build  nectar.in  store.py  window.py
